--- a/scss/_adaptive.scss
+++ b/scss/_adaptive.scss
@@ -34,6 +34,18 @@
   }
 }
 
+@media (max-width: 1600px) {
+  .navbar {
+    &-collapse {
+      @include ptl(10px, 275px);
+    }
+    &-brand {
+      @include ptl(38px,404px);
+    }
+  }
+
+}
+
 @media (max-width: 1400px){
   .share {
     .container-custom {
@@ -99,6 +111,19 @@
 @media (max-width: 1200px) {
   .container {
     max-width: 970px;
+  }
+  .navbar {
+    &-collapse {
+      .nav-link {
+        margin-right: 10px;
+      }
+      .features {
+        margin-right: 0;
+      }
+      .download {
+        margin-right: 0;
+      }
+    }
   }
   .new-features{
     .container-custom{
@@ -234,12 +259,63 @@
       }
     }
   }
+  .compatibility{
+    .container-custom{
+      .title{
+        margin: 89px auto 0 auto;
+        text-align: center;
+        max-width: 80%;
+      }
+      .operating-systems{
+        margin: 35px auto 0 auto;
+        .ios{
+          max-width: 450px;
+          margin: 0 auto;
+        }
+        .android{
+          max-width: 450px;
+          margin: 0 auto;
+        }
+      }
+    }
+  }
+  footer{
+    .copyright{
+      @include ptl(94px,0);
+      text-align: center;
+    }
+    .registration-form{
+      @include ptl(60px,0);
+      margin: 0 auto;
+      form{
+        display: flex;
+        flex-direction: column;
+        label{
+          text-align: center;
+        }
+        .email-form{
+          @include ptl(13px,0);
+          margin: 0 auto;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 992px) {
   .container {
     max-width: 750px;
   }
+  .navbar {
+    &-collapse{
+      @include ptl(10px,120px);
+      .nav-link {
+        max-width: 130px;
+        margin: 0 auto;
+      }
+    }
+  }
+
   .banner{
     .container-custom{
       .cta-block{
@@ -263,6 +339,21 @@
           .overlay{
             height: 50px;
           }
+        }
+      }
+    }
+  }
+  .compatibility{
+    .container-custom{
+      .operating-systems{
+        margin: 35px auto 0 auto;
+        .ios{
+          max-width: 450px;
+          margin: 20px auto;
+        }
+        .android{
+          max-width: 450px;
+          margin: 20px auto;
         }
       }
     }
@@ -319,7 +410,6 @@
     }
   }
 }
-
 
 @media (max-width: 768px) {
   .banner{
@@ -378,6 +468,48 @@
         &__buttons {
           margin: 42px auto 30px auto;
         }
+      }
+    }
+  }
+  .compatibility{
+    .container-custom{
+      .operating-systems{
+        .ios{
+          &__title{
+            text-align: center;
+          }
+          &__info{
+            text-align: center;
+          }
+          &__devices{
+            display: block;
+            margin: 20px auto;
+          }
+        }
+        .android{
+          &__title{
+            text-align: center;
+          }
+          &__info{
+            text-align: center;
+          }
+          &__devices{
+            display: block;
+            margin: 20px auto;
+          }
+        }
+      }
+    }
+  }
+  footer{
+    .row{
+      margin: 0;
+      padding: 0;
+    }
+    .registration-form{
+      padding: 0;
+      form{
+        margin: 0 auto;
       }
     }
   }
@@ -531,6 +663,21 @@
   }
 }
 
+@media (max-width: 450px) {
+  footer{
+    .registration-form{
+      form{
+        .email-form{
+          display: flex;
+          flex-direction: column;
+          button {
+            margin: 20px auto 0 auto;
+          }
+        }
+      }
+    }
+  }
+}
 
 @media (max-width: 420px) {
   .new-features {
@@ -563,6 +710,22 @@
             .likes {
               right: 0;
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .compatibility{
+    .container-custom{
+      .operating-systems{
+        .android{
+          img{
+            height: auto;
+            width: 90%;
+
           }
         }
       }
