--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -36,3 +36,19 @@ $s :11px;
   padding-top: $size;
   padding-left: $s;
 }
+
+//operating-systems title
+@mixin opt{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 600;
+  color: #666666;
+}
+
+//operating-systems info
+@mixin opi{
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.044px;
+}
